# bqos-oss

./: .gitignore  Cargo.toml  README.md
config/: Cargo.toml  (+1 more)
qos_daemon/: Cargo.toml
qos_daemon/src/: main.rs  version.rs
qos_daemon/src/graphing/: host.rs  latency.rs  mod.rs  queue_stats.rs
qos_daemon/src/pretty/: mod.rs
qos_daemon/src/shaper/: clear.rs  limits.rs  master_queues.rs  mod.rs  queue_counter.rs  tuning.rs  xdp_cpu_map.rs
qos_daemon/src/tree_builder/: ip_matchers.rs  mod.rs  queue_tree.rs
qos_daemon/src/tree_builder/strategy/: deep_hierarchy.rs  mod.rs  single_layer.rs  site_only.rs
qos_manager/: Cargo.toml  README.md  Rocket.toml
qos_manager/src/: config.rs  main.rs
qos_manager/src/bus/: bandwidth.rs  dupes.rs  host.rs  latency.rs  mod.rs  site_config.rs  tree.rs  unmapped.rs
qos_manager/src/influx/: aggregate_function.rs  mod.rs  query.rs  query_builder.rs  query_filter.rs
qos_manager/src/queries/: down_funnel.rs  drops.rs  frequency.rs  internet_bandwidth.rs  ip_dupes.rs  last_cpu.rs  last_memory.rs  latency_summary.rs  mod.rs  search.rs  tree.rs  uisp.rs
qos_manager/src/reports/: backhaul_congestion.rs  bill_plans.rs  mod.rs  nightly.rs  oversell.rs  site_latency.rs  speed_plans.rs  unknown_ip.rs
qos_manager/static/: access_point.html  ap_latency.html  billing_plans.html  bq.js  client.html  client_latency.html  congestion.html  congestion_ap.html  congestion_client.html  index.html  ip_dupe.html  nightly.html  oversell.html  reports.html  site.html  site_latency.html  system.html  tree.html  unknown_ip.html  unmapped.html
(+41 files in other folders)
