[package]
name = "qos_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
ron = "0.8"
serde = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest =  { version = "0.11", features = [ "json" ] }
colored = "2"
cidr = "0.2"
lazy_static = "1.4"
parking_lot = "0.12"
serde_json = "1.0"
sysinfo = "0.23"
config = { path = "../config" }
uisp_support = { path = "../uisp_support" }
shared_rest = { path = "../shared_rest" }
chrono = "0.4"