[package]
name = "qos_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = [ "json", "msgpack", "uuid" ] }
shared_rest = { path = "../shared_rest" }
uisp_support = { path = "../uisp_support" }
config = { path = "../config" }
influxdb2 = "0.1"
influxdb2-structmap = "0.1"
influxdb2-structmap-derive = "0.1"
chrono = "0.4"
lazy_static = "1.4"
parking_lot = "0.12"
urlencoding = "2.1"
anyhow = "1.0"
ron = "0.8"